[package]
name = "russia_block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="server"
path="src/server.rs"
[[bin]]
name="client"
path="src/client.rs"

[dependencies]
bevy="0.7.0"
rand="0.5.5"
prost="0.10.4"
tokio={version="1.19.0",features=["macros","rt-multi-thread"]}
tonic="0.7.2"
lazy_static="1.4.0"
[build-dependencies]
tonic-build="0.7.2"